--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                     <argLine>
                         -javaagent:"@{org.aspectj:aspectjweaver:jar}"
                     </argLine>
